operator/src/intTest/resources/org/projectnessie/operator/it/nessie/mongo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nessie-test
  labels:
    app.kubernetes.io/component: nessie
    app.kubernetes.io/instance: nessie-test
    app.kubernetes.io/managed-by: nessie-controller
    app.kubernetes.io/name: nessie
    app.kubernetes.io/part-of: nessie
    # noinspection KubernetesUnknownValues
    app.kubernetes.io/version: "@projectVersion@"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nessie
      app.kubernetes.io/instance: nessie-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nessie
        app.kubernetes.io/instance: nessie-test
    spec:
      containers:
        - name: nessie
          ports:
            - name: nessie
              containerPort: 19120
              protocol: TCP
          resources:
            requests:
              cpu: 400m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
      serviceAccountName: nessie-test-custom-service-account
