operator/src/intTest/resources/org/projectnessie/operator/it/nessie/mongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nessie-test
  labels:
    app.kubernetes.io/component: nessie
    app.kubernetes.io/instance: nessie-test
    app.kubernetes.io/managed-by: nessie-controller
    app.kubernetes.io/name: nessie
    app.kubernetes.io/part-of: nessie
    # noinspection KubernetesUnknownValues
    app.kubernetes.io/version: "@projectVersion@"
  annotations:
    foo: bar
spec:
  rules:
    - host: nessie.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nessie-test
                port:
                  number: 19120
